Fix alignment of continue-reading links
With the unification of all scss, the styling for flight-rules' articles
also affects the <articles> in the listing page.  They're using the
@centred mixin, therefore exhibiting a width that spans the entire main
column; aligning these to the end is ineffective, but text-align shall
do.

Also adopt styling to scss rather than directly in the element's
attribute.

--- a/sass/partials/article-hero.scss
+++ b/sass/partials/article-hero.scss
@@ -10,6 +10,10 @@ article.hero {
     margin: 0;
   }
 
+  a[href$="#continue-reading"] {
+    text-align: end;
+  }
+
   .summary {
     > :first-child { margin-top: 0; }
     > :last-child { margin-bottom: 0; }
